--- a/frontend_end_user/public/index.html
+++ b/frontend_end_user/public/index.html
@@ -3,41 +3,45 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
+
+    <!-- Updated Description -->
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="SmartServing - Seamlessly scan QR codes, browse menus, place orders, and enjoy a smarter dining experience."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Smart-Serve</title>
+    <!-- Keywords for SEO -->
+    <meta
+      name="keywords"
+      content="restaurant QR code menu, online food ordering system, dining table QR code, restaurant management software, self-ordering system, contactless menu app, order food in restaurants, restaurant SaaS solution, SmartServing QR code ordering, QR code menu for restaurants, restaurant billing and POS system, scan to order food app, restaurant menu app, online table booking, seamless dining experience, track food orders online, restaurant feedback app, integrated payment solutions for restaurants, real-time food ordering, digital menu card, no-server dining, SmartServing dining system, restaurant analytics software"
+    />
+
+    <!-- Open Graph Meta Tags for Social Media -->
+    <meta property="og:title" content="SmartServing - Scan. Order. Eat." />
+    <meta
+      property="og:description"
+      content="Experience seamless dining with SmartServing. Scan QR codes, order your favorite dishes, and track orders in real-time."
+    />
+    <meta property="og:url" content="https://smart-serving.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="%PUBLIC_URL%/assets/preview-image.png" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://smart-serving.com" />
+
+    <!-- Apple Touch Icon -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <!-- Manifest File -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!-- Title -->
+    <title>SmartServing - Scan. Order. Eat.</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
